--- a/Android/app/app/src/main/res/layout/fragment_update_profile.xml
+++ b/Android/app/app/src/main/res/layout/fragment_update_profile.xml
@@ -121,7 +121,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:hint="Birthdate (YYYY-MM-DD)"
+            android:hint="Textinsurance_id"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayoutBirthdate">
@@ -130,7 +130,6 @@
                 android:id="@+id/register_editTextinsurance_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:focusable="false"
                 android:inputType="date" />
         </com.google.android.material.textfield.TextInputLayout>
 
